# project-example

./: Cargo.toml
examples/: example.rs
src/: default.rs  math_functions.rs
src/math_functions/: add.rs  sub.rs
tests/: test.rs
